style.css
body {
  background-color: #e9e9e9;
}
a,
a:hover a:visited a:active {
  color: black;
  text-decoration: none;
}

.btn-primary {
  background-color: gray;
  border-color: gray;
  color: white;
}

#form {
  text-align: left;
  margin: 0px;
  justify-content: center;

}
.dark-mode {
  transition: background-color 0.5s ease;
}
.light-mode{
  transition: background-color 0.5s ease;
}

.bod {
  text-align: center;
  margin-top: 50px;
}

.dark-mode .bod {
  color: rgb(241, 241, 241);
}

.dark-mode .container {
  color: rgb(241, 241, 241);
}

.dark-mode #linkedInButtonText {

  color: rgb(215, 211, 211);

}

.dark-mode #githubButtonText {

  color: rgb(215, 211, 211);

}


#githubButton {
  animation: fadeIn2 3s ease;
}

#linkedInButton {
  animation: fadeIn2 3s ease;
}

@keyframes slideIn {
  0% {
    transform: translateY(500px);
  }

  100% {
    transform: translateY(0);
  }
}

.form-label {
  font-family: 'Tahoma', sans-serif;
  font-weight: 100 !important;
  font-size: 16px;
  font-weight: bold;

}

.form-control {
  font-family: 'Outfit', sans-serif;
  font-size: 14px;
}


.dark-mode {
  background-color: #1d1d1d;

}

.dark-mode #Hello {

  color: #ffffff !important;
}

.dark-mode #Name {

  font-weight: bold;
  color: #dbdada !important;
}

.dark-mode #Developer {

  font-weight: lighter;
  color: #dbdada !important;
}


.dark-mode .lead {

  color: #b3b3b3 !important;

}

.dark-mode .nav-link {
  color: rgba(255, 255, 255, 0.75) !important;
}




.dark-mode-toggle {
  position: fixed;
  top: 3%;
  right: 3%;
}

@media screen and (max-width: 1000px) {
  .dark-mode-toggle {
    position: fixed;
    top: 3%;
    right: -1%;
    transform: scale(0.70);
  }
}


.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #c3c3c3;
  -webkit-transition: .5s;
  transition: .7s;

}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked+.slider {
  background-color: #303030;
}

input:focus+.slider {
  box-shadow: 1px 1px 10px rgb(170, 178, 19);
}

input:checked+.slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

#Projects a.nav-link {
  color: #494b46 !important;
}

#Contact a.nav-link {
  color: #494b46 !important;
}

#Resume a.nav-link {
  color: #494b46 !important;
}

#AboutMeC a.nav-link,#ProjectsC a.nav-link,#ResumeC a.nav-link,#AboutMeR a.nav-link,#ProjectsR a.nav-link,#ContactR a.nav-link{
  color: #494b46 !important;
}
.dark-mode #AboutMeC a.nav-link,.dark-mode #ProjectsC a.nav-link,.dark-mode #ResumeC a.nav-link,.dark-mode #AboutMeR a.nav-link,.dark-mode #ProjectsR a.nav-link,.dark-mode #ContactR a.nav-link{
  color: rgb(234, 234, 234) !important;
}
#Contact a.nav-link,#Projects a.nav-link,#Resume a.nav-link{
  color: #494b46 !important;
}
.dark-mode #Contact a.nav-link,.dark-mode #Projects a.nav-link,.dark-mode #Resume a.nav-link{
  color: rgb(234, 234, 234) !important;
}
.nav-link {
  color: rgb(234, 234, 234) !important;
}

.nav-link.active {
  color: rgb(255, 255, 255) !important;
}

.nav-link {
  text-decoration: none;
  margin: 10px 10px;
  font-size: 25px;
}

#Hello {
  font-size: 45px;

}

#Name {
  font-size: 70px;
  font-weight: bold;
}

p.lead {
  font-size: 35px;
  color: rgb(95, 92, 92)
}

@keyframes fadeIn2 {
  0% {
    opacity: 0;
  }

  70% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes onTop {
  0% {
    top: -35px;
  }

  100% {
    top: 0px;
  }
}

@keyframes onLeft {
  0% {
    bottom: -500px;
  }

  100% {
    bottom: 0px;
  }
}

@keyframes scaleAnimation {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.05);
  }

  100% {
    transform: scale(1);
  }
}

.rounded-5:hover {
  animation: scaleAnimation .5s ease-in-out;
  opacity: 0.8;
  
}

#About,#AboutMeC,#AboutMeR {
  position: relative;
  top: -100px;
  animation: onTop 2s ease-in-out forwards, fadeIn 1s ease-in;
}

#Projects,#ProjectsC,#ProjectsR {

  position: relative;
  top: -100px;
  animation: onTop 2s ease-in-out forwards, fadeIn 1.5s ease-in;

}

#Contact,#ContactC,#ContactR {
  position: relative;
  top: -100px;
  animation: onTop 2s ease-in-out forwards, fadeIn 2s ease-in;
}

#Resume,#ResumeC,#ResumeR {
  position: relative;
  top: -100px;
  animation: onTop 2s ease-in-out forwards, fadeIn 2.5s ease-in;
}

#Hello {
  animation: fadeIn 1s ease;
}

#Name {
  animation: fadeIn 1.5s ease-in;
  text-align: left;
}

#Developer {
  text-align: left;
  font-size: 25px;
  animation: fadeIn 2s ease-in;
}

p.lead {
  position: relative;
  font-size: 22px;
  animation: fadeIn 2s ease-in, onLeft 2s ease-in-out forwards;
}

.nav-link:hover {
transform: scale(1.1);
}

